Multiple z-index fixes

--- a/src/renderer/components/HomeComponents/HomeDashboard/HomeDashboardNavBar/HomeDashboardNavBar.module.scss
+++ b/src/renderer/components/HomeComponents/HomeDashboard/HomeDashboardNavBar/HomeDashboardNavBar.module.scss
@@ -6,7 +6,7 @@
   display: flex;
 
   .buttons {
-    z-index: 2;
+    z-index: 1;
     width: 100%;
     height: 100%;
     display: flex;
